--- a/style.css
+++ b/style.css
@@ -1,1 +1,34 @@
 /* Empty file for template. Remember to edit only this file and not the HTML file */
+
+body {
+    background-color: #FAF9F6;
+}
+
+.page-wrapper::before {
+    border: solid 5px #0A3161;
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    right: 3px;
+    bottom: 3px;
+}
+
+.page-wrapper {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    border: solid 5px #B31942;
+    position: relative;
+    padding: 20px;
+    max-width: 1440px;
+    margin: auto;
+}
+
+h1 {
+    align-self: center;
+    text-align: center;
+}
+
+
+/*center parent of h1*/
