--- a/style.css
+++ b/style.css
@@ -91,6 +91,11 @@ abbr {
 a {
     color: var(--red);
     text-decoration: none;
+    transition: 300ms ease-in-out filter;
+}
+
+a:hover {
+    filter: drop-shadow(3px 3px 3px black);
 }
 
 a:visited {
@@ -185,6 +190,10 @@ aside {
     padding: 2em;
 }
 
+.wrapper h3 {
+    margin-top: 0;
+}
+
 .design-selection ul {
     columns: 2;
     column-gap: 2em;
@@ -199,14 +208,80 @@ aside {
 }
 
 .design-archives {
+    padding: 0;
+    display: flex;
     border-top: solid 0px transparent;
     border-bottom: solid 0px transparent;
-
+    position: relative;
+    height: 154px;
+    justify-content: center;
+    align-items: center;
 }
 
-.wrapper h3 {
-    margin-top: 0;
+.design-archives h3 {
+    font-size: 0;
+    position: absolute;
+    left: 1rem;
+    right: 1rem;
+    top: 0;
+    bottom: 0;
+    background-image: url(images/star_blue.svg), url(images/star_red.svg), url(images/star_blue.svg);
+    background-repeat: no-repeat;
+    background-position: center left, center center, center right;
+    background-size: 10% 80%;
+    width: auto;
+    height: auto;
+    z-index: -1;
 }
+
+.design-archives nav {
+    flex-grow: 1;
+}
+
+.design-archives ul {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    padding: 0;
+}
+
+.design-archives li {
+    list-style: none;
+    width: 28%;
+    text-align: center;
+    align-self: center;
+    
+    a {
+        font-size: 2.5rem;
+    }
+
+    .indicator {
+        font-size: 0;
+    }
+    
+}
+
+.zen-resources {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+}
+
+.zen-resources ul {
+    list-style: none;
+    
+    li {
+        background-image: url(images/star_blue.svg);
+        background-repeat: no-repeat;
+        background-position: center left;
+        background-size: 1em 100%;
+        padding-left: 2rem;
+    }
+}
+
+
+
+
 
 
 
