--- a/style.css
+++ b/style.css
@@ -29,31 +29,30 @@ body {
     z-index: -999;
 }
 
-.page-wrapper {
+div.page-wrapper {
     display: flex;
     flex-flow: column;
     justify-content: center;
     border: solid 10px var(--red);
     position: relative;
-    padding: 20px;
     max-width: 1440px;
     margin: auto;
 }
 
-.page-wrapper > * {
+.page-wrapper > *:not(.main.supporting){
     margin-left: 10%;
     margin-right: 10%;
 }
 
-.main.supporting {
+.page-wrapper .main.supporting {
     order: 1;
 }
 
-.main.supporting > * {
+.main.supporting > *:not(footer) {
     margin-top: 5rem;
+    margin-left: 10%;
+    margin-right: 10%;
 }
-
-
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Adamina';
@@ -137,7 +136,7 @@ p, li, a {
     font-size: 1.5rem;
 }
 
-header {
+section header {
     margin: auto;
     width: 90%;
     align-self: center;
@@ -174,10 +173,6 @@ header {
     z-index: -1;
 }
 
-
-
-
-
 aside {
     margin-top: 5em;
 }
@@ -211,11 +206,12 @@ aside {
     padding: 0;
     display: flex;
     border-top: solid 0px transparent;
-    border-bottom: solid 0px transparent;
     position: relative;
     height: 154px;
     justify-content: center;
     align-items: center;
+    width: 90%;
+    margin: auto;
 }
 
 .design-archives h3 {
@@ -264,11 +260,15 @@ aside {
 .zen-resources {
     display: flex;
     flex-flow: column nowrap;
-    align-items: center;
+    width: 50%;
+    margin: auto;
+    border-top: solid 0px transparent;
 }
 
 .zen-resources ul {
     list-style: none;
+    width: fit-content;
+    margin: auto;
     
     li {
         background-image: url(images/star_blue.svg);
@@ -278,13 +278,6 @@ aside {
         padding-left: 2rem;
     }
 }
-
-
-
-
-
-
-
 
 .explanation p:first-of-type, .explanation p:last-of-type {
     position: relative;
@@ -427,6 +420,87 @@ aside {
     background-repeat: no-repeat;
     transform: scaleX(-1);
 }
+
+#zen-requirements {
+    position: relative;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 7rem;
+    padding-bottom: 12rem;
+    columns: 2;
+    column-gap: 3em;
+}
+
+.requirements::before {
+    position: absolute;
+    content: "";
+    border-top: solid 10px var(--blue);
+    left: 5px;
+    right: 5px;
+    top: 0px;
+    bottom: 0px;
+}
+
+.requirements h3 {
+    position: absolute;
+    top: 0px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.requirements p {
+    margin-block-start: 0;
+    text-indent: 1em;;
+}
+
+.requirements [role=contentinfo] {
+    position: absolute;
+    background-color: var(--blue);
+    left: 5px;
+    right: 5px;
+    bottom: 0px;
+    margin-bottom: 0;
+    text-indent: 0;
+    padding: 2rem;
+    color: rgba(255, 255, 255, .8);
+}
+
+.requirements [role=contentinfo] a {
+    color: white;
+    font-weight: bold;
+}
+
+footer {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 1em;
+    border-top: solid 5px #FAF9F6;
+    background-color: var(--red);
+}
+
+footer::before {
+    content: "";
+    position: absolute;
+    border: solid 4px var(--red);
+    border-top-color: transparent;
+    left: -2px;
+    right: -2px;
+    top: 0;
+    bottom: -2px;
+}
+
+footer > a {
+    color: white;
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
+
 @media (max-width: 1000px) {
     h1 {
         font-size: 3rem;
